--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
          <h2 class="projects__title">Лучшие проекты</h2>
 
          <div class="projects__grid">
-            <article class="project-card">
+            <!-- <article class="project-card">
                <img src="./assets/img/project1.png" alt="Проект 1" class="project-card__img">
                <div class="project-card__content">
                   <h3 class="project-card__title">Landing Page</h3>
@@ -101,7 +101,7 @@
                   </p>
                   <a href="./pages/projects.html" class="project-card__btn button">Подробнее</a>
                </div>
-            </article>
+            </article> -->
          </div>
       </section>
 
