--- a/pages/dairy.html
+++ b/pages/dairy.html
@@ -42,7 +42,18 @@
                   </tr>
                </thead>
                <tbody id="dairy-table-body">
-                  
+                  <tr>
+                     <td>1</td>
+                     <td>Создание структуры проекта</td>
+                     <td>Разработана базовая структура HTML и SCSS файлов.</td>
+                     <td class="done">Выполнено</td>
+                  </tr>
+                  <tr>
+                     <td>3</td>
+                     <td>Сдать Контрольную</td>
+                     <td>Получить оценку за Контрольную работу №2</td>
+                     <td>Не начато</td>
+                  </tr>
                </tbody>
             </table>
          </div>
