--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>CONTACTS</title>
-   <link rel="shortcut icon" href="../assets/img/logo.ico" type="image/x-icon" />
+   <link rel="shortcut icon" href="../images/photo.png" type="image/x-icon" />
    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
@@ -34,7 +34,7 @@
          <div class="contacts__content">
             <div class="contacts__info">
                <ul class="contacts__list">
-                  <li><strong>Имя:</strong> Лев </li>
+                  <li><strong>Имя:</strong> Лев</li>
                   <li><strong>Группа:</strong> ЭФБО-05-24</li>
                   <li><strong>Почта:</strong> <a href="mailto:levkarchevsky@gmail.com">L1per@example.com</a></li>
                   <li><strong>Город:</strong> Москва</li>
