--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <p>Описание</p>
                   <p>Backend-разработчик (C++) в МТС, студент МИРЭА.</p>
                </div>
-               <a href="./assets/resume.html" class="resume__button button" download="resume.html">Скачать резюме</a>
+               <a href="./assets/resume.pdf" class="resume__button button" download="resume.pdf">Скачать резюме</a>
 
             </div>
          </div>
