--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,7 +47,7 @@
             <article class="project-card" data-category="js">
                <img src="../images/project1.jpg" alt="Calculator" class="project-card__img" />
                <div class="project-card__content">
-                  <a href="" target="_blank" class="visually-hidden"></a>
+                  <a href="https://github.com/L1perz" target="_blank" class="visually-hidden"></a>
                   <h3 class="project-card__title"> </h3>
                   <p class="project-card__desc">
                      Калькулятор реализованный на языке js.
@@ -58,7 +58,7 @@
             <article class="project-card" data-category="cpp">
                <img src="../images/project2.jpg" alt="Checkers" class="project-card__img" />
                <div class="project-card__content">
-                  <a href="" target="_blank" class="visually-hidden"></a>
+                  <a href="https://github.com/L1perz" target="_blank" class="visually-hidden"></a>
                   <h3 class="project-card__title"> Checkers</h3>
                   <p class="project-card__desc">
                      Программная версия игры шашек. Написанна на C++ c использованием QT.
@@ -69,7 +69,7 @@
             <article class="project-card" data-category="practice html">
                <img src="../images/project3.jpg" alt="Portfolio Website" class="project-card__img" />
                <div class="project-card__content">
-                  <a href="" target="_blank" class="visually-hidden"></a>
+                  <a href="https://github.com/L1perz" target="_blank" class="visually-hidden"></a>
                   <h3 class="project-card__title">Portfolio Website</h3>
                   <p class="project-card__desc">
                      Личный сайт-портфолио на SCSS и компонентной структуре.
@@ -98,7 +98,7 @@
          <img src="" alt="Скриншот проекта" class="project-modal__img" />
          <h3 class="project-modal__title"></h3>
          <p class="project-modal__desc"></p>
-         <a href="" target="_blank" class="button" id="modal-code">Исходный код</a>
+         <a href="https://github.com/L1perz" target="_blank" class="button" id="modal-code">Исходный код</a>
       </div>
    </div>
 
@@ -107,7 +107,7 @@
          <li>
             <p class="footer__desc">© 2025–2026 гг. Все права защищены</p>
          </li>
-         <li><a href="" class="footer__link">github.com</a></li>
+         <li><a href="https://github.com/L1perz" class="footer__link">github.com</a></li>
       </ul>
    </footer>
 
