--- a/index.html
+++ b/index.html
@@ -1,114 +1,142 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-   <title>MAIN</title>
-   <link rel="shortcut icon" href="./images/photo.png" type="image/x-icon">
-   <link rel="stylesheet" href="./css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>MAIN</title>
+  <link rel="shortcut icon" href="./images/photo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-   <header class="header">
-      <div class="header-wrapper">
-         <a href="index.html" class="header__logo logo">L1per</a>
-         <nav class="nav">
-            <ul class="nav__list">
-               <li class="nav__item"><a href="index.html">Главная</a></li>
-               <li class="nav__item"><a href="pages/projects.html">Проекты</a></li>
-               <li class="nav__item"><a href="pages/dairy.html">Дневник</a></li>
-               <li class="nav__item"><a href="pages/contacts.html">Контакты</a></li>
-            </ul>
-         </nav>
+  <a class="skip-link" href="#main">Перейти к основному содержимому</a>
+  <header class="header">
+    <div class="header-wrapper">
+      <a href="index.html" class="header__logo logo">L1per</a>
+      <nav class="nav" aria-label="Основная навигация">
+        <ul class="nav__list">
+          <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/projects.html">Проекты</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/dairy.html">Дневник</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/contacts.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main id="main" class="content">
+    <section class="hero container">
+      <div class="hero__inner">
+        <figure class="hero__photo">
+          <picture>
+            <source srcset="
+                     ./images/photo-800.png 2x,
+                     ./images/photo-400.png 1x
+                  " media="(min-width: 600px)" />
+            <source srcset="./images/photo-400.png" media="(max-width: 599px)" />
+            <img src="./images/photo.png" alt="Логотип" class="resume__image" loading="lazy" />
+          </picture>
+        </figure>
+        <div class="hero__info">
+          <h1 class="hero__name">Карчевский Лев</h1>
+          <p class="hero__meta">ЭФБО-05-24 · Backend-разработчик (C++) в МТС · студент МИРЭА</p>
+          <a href="./assets/resume.pdf" class="resume__button button" download="resume.pdf">Скачать резюме</a>
+        </div>
       </div>
-   </header>
+    </section>
 
-   <main class="content">
-      <section class="resume container">
-         <div class="resume-info">
-            <img src="./images/photo.png" alt="Логотип L1per" height="100" width="80" class="resume__image">
-            <div class="resume-wrapper">
-               <div class="description">
-                  <p><strong>Имя:</strong> Карчевский Лев</p>
-                  <p><strong>Группа:</strong> ЭФБО-05-24</p>
-                  <p>Описание</p>
-                  <p>Backend-разработчик (C++) в МТС, студент МИРЭА.</p>
-               </div>
-               <a href="./assets/resume.pdf" class="resume__button button" download="resume.pdf">Скачать резюме</a>
-
-            </div>
-         </div>
-      </section>
-
-      <section class="skills container">
-         <h2>Мои навыки</h2>
-         <div class="skill">
-            <span class="skill__name">HTML/CSS</span>
-            <div class="skill__progress">
-               <div class="progress__bar" style="width: 70%;"></div>
-            </div>
-            <div class="skill__percent">70%</div>
-            <span class="skill__name">JavaScript</span>
-            <div class="skill__progress">
-               <div class="progress__bar" style="width: 50%;"></div>
-            </div>
-            <div class="skill__percent">50%</div>
-            <span class="skill__name">Bootstrap</span>
-            <div class="skill__progress">
-               <div class="progress__bar" style="width: 20%;"></div>
-            </div>
-            <div class="skill__percent">20%</div>
-            <span class="skill__name">React</span>
-            <div class="skill__progress">
-               <div class="progress__bar" style="width: 5%;"></div>
-            </div>
-            <div class="skill__percent">5%</div>
-         </div>
-      </section>
-
-      <section class="projects container">
-         <h2 class="projects__title">Лучшие проекты</h2>
-
-         <div class="projects__grid">
-            <article class="project-card" data-category="js">
-               <img src="./images/project1.jpg" alt="Calculator" class="project-card__img" />
-               <div class="project-card__content">
-                  <a href="" target="_blank" class="visually-hidden"></a>
-                  <h3 class="project-card__title"> </h3>
-                  <p class="project-card__desc">
-                     Калькулятор реализованный на языке js.
-                  </p>
-               </div>
-            </article>
-
-            <article class="project-card" data-category="cpp">
-               <img src="./images/project2.jpg" alt="Checkers" class="project-card__img" />
-               <div class="project-card__content">
-                  <a href="" target="_blank" class="visually-hidden"></a>
-                  <h3 class="project-card__title"> Checkers</h3>
-                  <p class="project-card__desc">
-                     Программная версия игры шашек. Написанна на C++ c использованием QT.
-                  </p>
-               </div>
-            </article>
-         </div>
-      </section>
-
-   </main>
-
-   <footer class="footer">
-      <ul class="footer__menu">
-         <li class="footer__item">
-            <p class="footer__desc">© 2025-2026 гг. Все права защищены</p>
-         </li>
-         <li class="footer__item">
-            <a href="https://github.com/" class="footer__link">github.com</a>
-         </li>
+    <section class="skills container">
+      <h2>Мои навыки</h2>
+      <ul class="skill-list">
+        <li class="skill" aria-label="HTML и CSS 70 процентов">
+          <span class="skill__name">HTML/CSS</span>
+          <div class="skill__progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70">
+            <div class="progress__bar" style="width:70%"></div>
+          </div>
+          <div class="skill__percent">70%</div>
+        </li>
+        <li class="skill" aria-label="JavaScript 50 процентов">
+          <span class="skill__name">JavaScript</span>
+          <div class="skill__progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50">
+            <div class="progress__bar" style="width:50%"></div>
+          </div>
+          <div class="skill__percent">50%</div>
+        </li>
+        <li class="skill" aria-label="Bootstrap 20 процентов">
+          <span class="skill__name">Bootstrap</span>
+          <div class="skill__progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20">
+            <div class="progress__bar" style="width:20%"></div>
+          </div>
+          <div class="skill__percent">20%</div>
+        </li>
+        <li class="skill" aria-label="React 5 процентов">
+          <span class="skill__name">React</span>
+          <div class="skill__progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="5">
+            <div class="progress__bar" style="width:5%"></div>
+          </div>
+          <div class="skill__percent">5%</div>
+        </li>
       </ul>
-   </footer>
+    </section>
 
-   <script src="./scripts/main.js"></script>
+    <section class="projects container" id="projects-area">
+      <h2 class="projects__title">Лучшие проекты</h2>
+      <div class="projects__grid" aria-live="polite">
+        <article class="project-card" data-category="js" tabindex="0" aria-label="Калькулятор">
+          <picture>
+            <img src="./images/project1.jpg"
+              srcset="./images/project1-300.jpg 300w, ./images/project1-600.jpg 600w"
+              width="400" height="300" loading="lazy" alt="Калькулятор" class="project-card__img">
+          </picture>
+          <div class="project-card__content">
+            <h3 class="project-card__title">Калькулятор</h3>
+            <p class="project-card__desc">Калькулятор реализованный на языке js.</p>
+            <button class="button project-card__btn" data-src="./images/project1-600.jpg" data-title="Калькулятор"
+              data-desc="Калькулятор на JavaScript">Подробнее</button>
+          </div>
+        </article>
+
+        <article class="project-card" data-category="cpp" tabindex="0" aria-label="Checkers">
+          <picture>
+            <img src="./images/project2.jpg"
+              srcset="./images/project2-300.jpg 300w, ./images/project2-600.jpg 600w"
+              width="400" height="300" loading="lazy" alt="Checkers" class="project-card__img">
+          </picture>
+          <div class="project-card__content">
+            <h3 class="project-card__title">Checkers</h3>
+            <p class="project-card__desc">Программная версия игры шашек. Написанна на C++ c использованием QT.</p>
+            <button class="button project-card__btn" data-src="./images/project2-600.jpg" data-title="Checkers"
+              data-desc="Шашки на C++ и Qt">Подробнее</button>
+          </div>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <ul class="footer__menu">
+      <li class="footer__item">
+        <p class="footer__desc">© 2025–2026 гг. Все права защищены</p>
+      </li>
+      <li class="footer__item">
+        <a href="https://github.com/" class="footer__link" target="_blank" rel="noopener">github.com</a>
+      </li>
+    </ul>
+  </footer>
+
+  <div class="project-modal" id="project-modal" aria-hidden="true" role="dialog" aria-label="Информация о проекте">
+    <div class="project-modal__content" role="document">
+      <button class="project-modal__close" id="modal-close" aria-label="Закрыть">×</button>
+      <img src="" alt="" class="project-modal__img responsive-image" />
+      <h3 class="project-modal__title"></h3>
+      <p class="project-modal__desc"></p>
+      <a href="#" target="_blank" rel="noopener" class="button" id="modal-code">Исходный код</a>
+    </div>
+  </div>
+
+  <div class="notification" id="notification" role="status" aria-live="polite"></div>
+
+  <script src="./scripts/main.js"></script>
 </body>
 
 </html>
