--- a/pages/dairy.html
+++ b/pages/dairy.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+   <a class="skip-link" href="#main">Перейти к основному содержимому</a>
    <header class="header">
       <div class="header-wrapper">
          <a href="../index.html" class="header__logo logo">L1per</a>
@@ -24,7 +25,7 @@
       </div>
    </header>
 
-   <main class="content">
+   <main id="main" class="content">
       <section class="dairy container">
          <h1 class="dairy__title">Учебный дневник</h1>
          <p class="dairy__subtitle">
