--- a/pages/dairy.html
+++ b/pages/dairy.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>DAIRY</title>
-   <link rel="shortcut icon" href="../assets/img/logo.ico" type="image/x-icon" />
+   <link rel="shortcut icon" href="../images/photo.png" type="image/x-icon" />
    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
