--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>PROJECTS</title>
-  <link rel="shortcut icon" href="../assets/img/logo.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/photo.png" type="image/x-icon" />
   <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
